@@ -2,6 +2,7 @@ package com.enviro.assessment.grad001.kganyamaleka.controllers;
 
 import org.springframework.web.bind.annotation.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/nelson")
@@ -9,17 +10,20 @@ public class WebhookContoller {
 
     @PostMapping
     public Map<String, List<String>> handleWebhook(@RequestBody Map<String, String> payload) {
+        System.out.println("Payload received: " + payload);
         String input = payload.get("data");
+        if (input == null) {
+            throw new IllegalArgumentException("Payload missing 'data' field");
+        }
 
-        // Convert to char array, sort, and collect back as list of strings
         List<String> sortedChars = input.chars()
                 .mapToObj(c -> String.valueOf((char) c))
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
 
-        // Return as JSON
         Map<String, List<String>> response = new HashMap<>();
         response.put("word", sortedChars);
         return response;
     }
+
 }
